fixing text wrap on titles

--- a/css/primitives.css
+++ b/css/primitives.css
@@ -26,7 +26,8 @@ font-face {
 }
 .bp-item {
 	position: absolute;
-	overflow: hidden;
+	overflow: visible;
+	overflow-wrap: break-word;
 	font-family: 'Roboto';
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	-webkit-user-select: none;
@@ -57,7 +58,7 @@ font-face {
 	white-space: nowrap;
 	font-size: 14px;
 	line-height: 16px;
-	color: white;
+	color: black;
 	padding: 0;
 }
 
@@ -100,7 +101,7 @@ font-face {
 .bp-grouptitle-frame {
 	background: #0000ff;
 	border-width: 0;
-	color: white;
+	color: #000000;
 	padding: 0;
 }
 
